--- a/public/style.css
+++ b/public/style.css
@@ -5,11 +5,20 @@
 }
 
 .actions-btn{
-    margin-top: 5%;
+    margin-top: 4.4%;
+    margin-right: 2%;
     z-index: 100 !important;
     background-color: rgb(14, 187, 14) !important;
-    color: black !important;
+    color: rgb(6, 28, 150) !important;
+    height: 55px !important;
+    width: 55px !important;
 }
+
+.actions-btn-icon{
+    font-size: 33px !important;
+}
+
+/* Butons */
 
 .save-btn{
     background-color: green !important;
@@ -26,6 +35,11 @@
     color: white !important;
 }
 
+/* Buttons */
+
+.dialog-default {
+    padding: 10px;
+  }
 
 .title-topo{
     text-align: center;
